Move to ci-master for CI configuration managment

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,19 @@
-dist: trusty
-sudo: false
+# Auto-generated !!! Do not edit it manually
+# use ci-master https://github.com/metanorma/metanorma-build-scripts
 language: ruby
-
+cache: bundler
+os:
+- linux
+- osx
 rvm:
-  - 2.5
-  - 2.4
-  - 2.3
-  - ruby-head
-before_install: gem install bundler -v 2.0.1
-
+- 2.5
+- 2.4
+- 2.3
+- ruby-head
+before_install: 
+- gem install bundler -v 2.0.1
+- bundle update
 matrix:
   allow_failures:
+    - rvm: 2.3
     - rvm: ruby-head
