--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,9 @@
 /spec/reports/
 /tmp/
 /.vscode/
+/vendor/
 
 # rspec failure tracking
 .rspec_status
+.rubocop-https---raw-githubusercontent-com-riboseinc-oss-guides-master-ci-rubocop-yml
+Gemfile.lock
